kubernetesonprem/ingress/falco-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco-ingress
  namespace: falco
  
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: falco.exakaconsulting.org
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: falco-falcosidekick-ui
            port:
              number: 2802
