kubernetesonprem/ingress/prometheus-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.exakaconsulting.org
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
