kubernetesonprem/ingress/vault-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vault.exakaconsulting.org
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
